Adding Fetchr pages

--- a/fetchr/index.html
+++ b/fetchr/index.html
@@ -2,36 +2,46 @@
 <!-- <html data-bs-theme="dark"> -->
 <html>
     <head>
-        <title>Riigess Technologies LLC</title>
+        <title>Fetchr</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdeliver.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="styles/index.css">
+        <link rel="stylesheet" type="text/css" href="../styles/index.css">
     </head>
     <body>
         <div class="navbar navbar-light">
             <!-- <div class="container-fluid" style="text-align: left"> -->
             <div style="text-align: left">
                 <div style="width:0.8rem"></div>
-                <a href="https://riigess.com" class="navbar-brand"><img src="images/Riigess-logo-only@0.2x.png" width="30"></a>
+                <a href="https://riigess.com" class="navbar-brand"><img src="../images/Riigess-logo-only@0.2x.png" width="30"></a>
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <a href="https://riigess.com/fetchr/">Fetchr</a>
+                    <a href="https://riigess.com/fetchr">Fetchr</a>
                 </div>
                 <div class="navbar-item">
                     <a href="https://riigess.com/about">About</a>
                 </div>
             </div>
         </div>
-        <div style="height: 4rem;"></div> <!-- Forcing content below this line -->
+        <div style="top: 4rem; left: 0; display: block; position: fixed; height: 3rem; width: 100%; background-color: #555;">
+            <div class="navbar-end">
+                <div class="navbar-item" style="top: 0.6rem;">
+                    <a href="https://riigess.com/fetchr/privacy-policy" style="text-decoration: none; color: #f0f0f0;">Privacy Policy</a>
+                </div>
+                <div class="navbar-item" style="top: 0.6rem;">
+                    <a href="https://riigess.com/fetchr/terms-of-service" style="text-decoration: none; color: #f0f0f0;">Terms of Service</a>
+                </div>
+            </div>
+        </div>
+        <!-- <div style="height: 4rem;"></div> --> <!-- Forcing content below this line -->
         <!-- <canvas class="connected-dots" id="connecteddots"></canvas> -->
         <div class="container">
             <div class="content">
                 <div class="horizontal-center">
-                    <h2 class="title">Riigess Technologies LLC</h2>
-                    <div class="subtitle">Connecting people with their audiences.</div>
+                    <h2 class="title">Fetchr</h2>
+                    <div class="subtitle">An API Requesting utility.</div>
                 </div>
             </div>
         </div>
@@ -44,9 +54,9 @@
                     <a href="https://riigess.com/fetchr">Fetchr</a>
                     <div class="footer-break">•</div>
                     <a href="https://riigess.com/about">About us</a>
+                    <!-- <div class="footer-break">•</div>
+                    <a href="https://riigess.com/policies">Policies</a> -->
                     <div class="footer-break">•</div>
-                    <!-- <a href="https://riigess.com/policies">Policies</a>
-                    <div class="footer-break">•</div> -->
                     <a href="https://riigess.com/support">Support</a>
                 </div>
             </div>
