Publishing Fetchr and Support
Official release for Fetchr and Support

--- a/support.html
+++ b/support.html
@@ -20,11 +20,11 @@
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <a href="#">Fetchr</a>
+                    <a href="https://riigess.com/fetchr">Fetchr</a>
                 </div>
-                <div class="navbar-item">
+                <!-- <div class="navbar-item">
                     <a href="#">About</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div style="height: 5rem;"></div> <!-- Forcing content below this line -->
@@ -75,8 +75,8 @@
                     <a href="https://riigess.com">Home</a>
                     <div class="footer-break">•</div>
                     <a href="https://riigess.com/fetchr">Fetchr</a>
-                    <div class="footer-break">•</div>
-                    <a href="https://riigess.com/about">About us</a>
+                    <!-- <div class="footer-break">•</div>
+                    <a href="https://riigess.com/about">About us</a> -->
                     <!-- <div class="footer-break">•</div>
                     <a href="https://riigess.com/policies">Policies</a> -->
                     <div class="footer-break">•</div>
