--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             </div>
             <div class="navbar-end">
                 <div class="navbar-item">
-                    <a href="https://riigess.com/fetchr/">Fetchr</a>
+                    <a href="https://riigess.com/fetchr">Fetchr</a>
                 </div>
-                <div class="navbar-item">
+                <!-- <div class="navbar-item">
                     <a href="https://riigess.com/about">About</a>
-                </div>
+                </div> -->
             </div>
         </div>
         <div style="height: 4rem;"></div> <!-- Forcing content below this line -->
@@ -39,20 +39,19 @@
         <div class="footer footer-background">
             <div class="horizontal-center">
                <div style="text-align: center; color: #e0e0e0;">
-                    <a href="https://riigess.com">Home</a>
-                    <div class="footer-break">•</div>
-                    <a href="https://riigess.com/fetchr">Fetchr</a>
-                    <div class="footer-break">•</div>
-                    <a href="https://riigess.com/about">About us</a>
-                    <div class="footer-break">•</div>
-                    <!-- <a href="https://riigess.com/policies">Policies</a>
-                    <div class="footer-break">•</div> -->
-                    <a href="https://riigess.com/support">Support</a>
+                <a href="https://riigess.com">Home</a>
+                <div class="footer-break">•</div>
+                <a href="https://riigess.com/fetchr">Fetchr</a>
+                <!-- <div class="footer-break">•</div>
+                <a href="https://riigess.com/about">About us</a> -->
+                <!-- <div class="footer-break">•</div>
+                <a href="https://riigess.com/policies">Policies</a> -->
+                <div class="footer-break">•</div>
+                <a href="https://riigess.com/support">Support</a>
                 </div>
             </div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <!-- <script src="scripts/circles.js"></script> -->
     </body>
 </html>
