--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
       </div>
     </div>
-    
-    <div class="container horizontal-center">
+
+    <div class="container horizontal-center horizontal-center-height">
       <div class="roundedbottom">
         <div class="bottomitem" title="Home">
           <a href="#">
@@ -78,7 +78,6 @@
         </div>
       </div>
     </div>
-    <div style="height:2em;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="scripts/index.js"></script>
   </body>
